sumo/tests/duarouter/errors/default_departpos_false/errors.duarouter
Error: Invalid departpos definition;
 must be one of ("random", "random_free", "free", or a float)
Quitting (on error).
